--- a/.github/workflows/manual-scrape-accmf.yml
+++ b/.github/workflows/manual-scrape-accmf.yml
@@ -1,7 +1,13 @@
 
-name: spacejob scraper
+name: spacejob scraper otc accmf
 
-on: workflow_dispatch
+on:
+  workflow_dispatch:
+    inputs:
+      quotes_url:
+        description: 'url for quotes'
+        required: true
+        default: ''
 
 #scrape At the end of every day
 # on:
@@ -22,7 +28,6 @@ jobs:
         #https://github.com/marketplace/actions/build-and-push-docker-images
       - name: Build image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-        continue-on-error: true
         with:
           context: .
           push: false
@@ -30,21 +35,20 @@ jobs:
           tags: spacewatcher
           labels: ${{ steps.meta.outputs.labels }}
 
-    
+      #### container mounts python code at runtime
       #https://github.com/marketplace/actions/docker-run-action
-      - name: Run Python inside container 
-        uses: addnab/docker-run-action@v3
+      - uses: addnab/docker-run-action@v3
         with:
           image: spacewatcher
-          options: -w /usr/workspace -v ${{ github.workspace }}:/usr/workspace 
-          # run: python3 test_script.py
-          run: python3 -m unittest test_script.TestTemplate.test_case_0
+          # options: -w /usr/workspace -v ${{ github.workspace }}:/usr/workspace --env OTC_QUOTES_URL=${{ secrets.OTC_QUOTES_URL }} 
+          options: -w /usr/workspace -v ${{ github.workspace }}:/usr/workspace --env OTC_QUOTES_URL=${{ github.event.inputs.quotes_url }}
+          run: python3 -m unittest test_script.TestTemplate.test_case_1
 
       - name: view output
         run: |
-          echo "output: "
           ls
-          cat result.txt
+          cat prev_close.txt
+          
 
 
       # - name: Release
